tests/lean/def2.lean.expected.out
def2.lean:3:0: error: definition 'foo' is noncomputable, it depends on 'val'
