tests/lean/def2.lean
axiom val : nat

definition foo : nat :=
val

noncomputable definition foo2 : nat :=
val

noncomputable definition bla : nat :=
2
